# anatomy

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
agent-framework/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
agent-framework/backend/api/: main.py
agent-framework/backend/database/: models.py  session.py
agent-framework/backend/tests/: test_agent_cycle.py  test_guardrails.py  test_layers.py  test_memory.py  test_tools.py
backend/: pyproject.toml  requirements.txt
backend/agent_framework/: __init__.py
backend/agent_framework/config/: __init__.py  agent.py
backend/agent_framework/core/: agent.py  types.py
backend/agent_framework/guardrails/: base.py  content_filter.py  orchestrator.py  policy_enforcer.py
backend/agent_framework/memory/: __init__.py  base.py  episodic.py  retrieval.py  semantic.py  store.py
backend/agent_framework/observability/: __init__.py  context.py  logger.py
backend/agent_framework/tools/: __init__.py  base.py  validator.py
backend/api/: main.py  middleware.py  middleware_request_id.py
backend/api/middleware/: __init__.py  (+5 more)
backend/tests/: conftest.py  test_agent_subagents.py  test_agents_service.py  test_api.py  test_api_health.py  test_error_and_requestid.py  test_memory_base.py  test_memory_retrieval_additional.py  test_memory_service.py  test_middleware.py  test_multi_agent_edge_cases.py  test_multi_integration.py  test_observability.py  test_planning.py  test_retrieval.py  test_tools.py  test_tools_service.py  test_validator.py
(+155 files in other folders)
