[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "agent_framework"
version = "0.1.0"
description = "Agent framework backend"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
	"fastapi",
	"sqlalchemy",
	"httpx",
	"pydantic",
	"python-dotenv",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-asyncio",
	"black",
	"flake8",
	"mypy",
]

[project.scripts]
agent = "agent_framework.core.agent:Agent"
